syntax = "proto3";

option go_package="pb";

message ActivityRequest {
  int64   userId       = 1;
  string  ActivityType = 2;
  string  TimeSpent    = 3;
  string  CreatedAt    = 4;
}

message ActivityResponse {
  int64   id           = 1;
  int64   userId       = 2;
  string  ActivityType = 3;
  string  TimeSpent    = 4;
  string  CreatedAt    = 5;
}

message UserRequest {
  string Name  = 1;
  string Email = 2;
  string Phone = 3;
}

message UserResponse {
  int64 id     = 1;
  string Name  = 2;
  string Email = 3;
  string Phone = 4;
}


message ActivityRequestBdy {
  ActivityRequest request = 1;
}

message Response {
   int64 id = 1;
}

message GetActivityRequest {
   int64 id = 1;
}

message GetActivityResponse {
  ActivityResponse activity =1;
}

message GetActivityByUserResponse {
  repeated ActivityResponse activity =1;
}

message DeleteActivityRequest {
  int64 id =1;
}

message Request {
  UserRequest request = 1;
}

message GetUserRequest {
  int64 userid = 1;
}

message GetUserResponse {
  UserResponse User =1;
}

message DeleteUserRequest {
  int64 id =1;
}


service ActivityService {
  rpc CreateActivity (ActivityRequestBdy) returns (Response) {}
  rpc GetActivity (GetActivityRequest) returns (GetActivityResponse) {}
  rpc GetActivityByUserId (GetActivityRequest) returns (GetActivityByUserResponse) {}
  rpc UpdateActivity (ActivityRequestBdy) returns (Response) {}
  rpc DeleteActivity (DeleteActivityRequest) returns (Response) {}
}

service UserService {

  rpc CreateUser (Request) returns (Response) {}
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
  rpc UpdateUser (Request) returns (Response) {}
  rpc DeleteUser (DeleteUserRequest) returns (Response) {}

}